5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1795_3139.log
== TEST (2019-05-30 17:35:28) 
-- CODE:
#8 + 
v = 36*6
print(v)
-- OUTPUT:
216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:35:51) 
-- CODE:
#8 + 216 +
v = 6*6*6
print(v)
-- OUTPUT:
216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:10) 
-- CODE:
#8 + 216 +
v = 3*9
print(v)
-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:51) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
print(v1/4)
-- OUTPUT:
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:23) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
print(v1/v2)
-- OUTPUT:
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:09) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
v3 = 12*12*12
print(v3)
-- OUTPUT:
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:21) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
v3 = 12*12*12
print(v3/4)
-- OUTPUT:
432.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:26) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
v3 = 12*12*12
print(v3)
-- OUTPUT:
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:39:01) 
-- CODE:
v1 = 8 + 216 + 27 + 1
v2 = 4
v3 = 1/3
print(v3)
-- OUTPUT:
0.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:02) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3

print(v3)

-- OUTPUT:
0.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:12) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica

print(v3)

-- OUTPUT:
0.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:56) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333

print(v3)

-- OUTPUT:
0.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:57) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333

print(v3)

-- OUTPUT:
0.3333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:06) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:52) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:54) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:59) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

print(v4)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:24) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

print(v3/v4)

-- OUTPUT:
0.027777777777777776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:36) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

print(v4/v3)

-- OUTPUT:
36.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:10) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
print(v5)

-- OUTPUT:
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:33) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
print(v4)
print(v5)

-- OUTPUT:
12
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:50) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
print(v4)
print(v5)
print(12*12*12)
-- OUTPUT:
12
1728
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:56) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
print(v4)
print(v5)
-- OUTPUT:
12
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:08) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
v6 = v5/v2
print(v4)
print(v5)
-- OUTPUT:
12
1728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:16) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
v6 = v5/v2
print(v4)
print(v5)
print(v6)
-- OUTPUT:
12
1728
432.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:50) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v5 = v4 * v4 * v4
v6 = v5/v2
print(v4)
print(v5)
print(v6)
print(v1/v2)
-- OUTPUT:
12
1728
432.0
63.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:48:28) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v6 = v5/v2

print(32/5.6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v6 = v5/v2
NameError: name 'v5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:19) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v6 = v5/v2

g = 32
b = 5.6
print(g/b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v6 = v5/v2
NameError: name 'v5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:24) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1
v6 = v5/v2

g = 32
b = 5.6
print(g/b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v6 = v5/v2
NameError: name 'v5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:49:35) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica 0.3333333333333333
v4 = 2+6+3+1

g = 32
b = 5.6
print(g/b)
-- OUTPUT:
5.714285714285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:47) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
print(c*c*c)
-- OUTPUT:
186.58892128279885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:57) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
print(c)
-- OUTPUT:
5.714285714285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:19) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
print(round(c),2)
-- OUTPUT:
6 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:29) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
print(round(c,2))
-- OUTPUT:
5.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:30) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
print(round(c,2))
-- OUTPUT:
5.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:53:02) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
d = (round(c, 2))
print(d*d*d)
-- OUTPUT:
186.16941100000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:53:11) 
-- CODE:
v1 = 8 + 216 + 27 + 1 #^3

v2 = 4 #quantidade
v3 = 1/3 #cubica
v4 = 2+6+3+1


#exemplo
g = 32
b = 5.6
c = g/b
d = (round(c, 2))
print(d)
-- OUTPUT:
5.71
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
